20200525日更新，着手开发登陆验证。

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     </script>
 </head>
 <body>
-<h1>Welcome! My Friend!</h1>
+<h1>Welcome! My Friend!!</h1>
 <h2><input id="register" type="submit" value="注册" onclick="userRegister()"></h2>
 </body>
 </html>
